fix: view templ error

--- a/view/admin/index/index.templ
+++ b/view/admin/index/index.templ
@@ -1,3 +1,4 @@
+
 package adminIndex
 
 import "github.com/fossyy/filekeeper/view/admin/layout"
@@ -443,6 +444,6 @@ templ Main() {
 				</div>
 			</main>
 		</div>
-		<script src="/public/websocket.js" />
+		<script src="/public/websocket.js"></script>
 	}
 }
