--- a/view/client/auth/forgotPassword/forgotPassword.templ
+++ b/view/client/auth/forgotPassword/forgotPassword.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ content(title string, err types.Message) {
-    @layout.Base(title){
+    @layout.Base(title) {
         <div class="bg-gray-100 flex items-center justify-center min-h-screen">
             <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
                 <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Forgot Password</h1>
@@ -53,7 +53,7 @@ templ Main(title string, err types.Message) {
 }
 
 templ NewPasswordForm(title string, err types.Message) {
-    @layout.Base(title){
+    @layout.Base(title) {
         <div class="bg-gray-100 flex items-center justify-center min-h-screen">
           <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
             <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Reset Password</h1>
@@ -116,13 +116,13 @@ templ NewPasswordForm(title string, err types.Message) {
               </div>
             </form>
           </div>
-          <script src="/public/validatePassword.js" />
+          <script src="/public/validatePassword.js"></script>
         </div>
     }
 }
 
 templ EmailSend(title string) {
-    @layout.Base(title){
+    @layout.Base(title) {
         <style>h1, h2, h3, h4, h5, h6 { font-family: 'Arimo', sans-serif; --font-sans: 'Arimo'; }</style>
         <style>body { font-family: 'Libre Franklin', sans-serif; --font-sans: 'Libre Franklin'; }</style>
         <div class="flex flex-col items-center justify-center min-h-[80vh] gap-6">
@@ -154,7 +154,7 @@ templ EmailSend(title string) {
 }
 
 templ ChangeSuccess(title string) {
-    @layout.Base(title){
+    @layout.Base(title) {
         <style>h1, h2, h3, h4, h5, h6 { font-family: 'Arimo', sans-serif; --font-sans: 'Arimo'; }</style>
         <style>body { font-family: 'Libre Franklin', sans-serif; --font-sans: 'Libre Franklin'; }</style>
         <div class="flex flex-col items-center justify-center min-h-[80vh] gap-6">
